--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <footer>
-      <p>Poweres by: Mohamad salman farizi | 20180040048 | TI18A</p>
+      <p>Powered by: Mohamad salman farizi | 20180040048 | TI18A</p>
     </footer>
   </body>
 </html>
